--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
+  "extends": "@strapi/typescript-utils/tsconfigs/server",
   "compilerOptions": {
     "module": "CommonJS",
     "moduleResolution": "Node",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020"
+    ],
     "target": "ES2019",
     "strict": false,
     "skipLibCheck": true,
@@ -13,7 +16,8 @@
     "noEmitOnError": true,
     "noImplicitThis": true,
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "allowJs": true
   },
   "include": [
     // Include root files
@@ -25,14 +29,12 @@
     // Force the JSON files in the src folder to be included
     "src/**/*.json"
   ],
-
   "exclude": [
     "node_modules/",
     "build/",
     "dist/",
     ".cache/",
     ".tmp/",
-
     // Do not include admin files in the server compilation
     "src/admin/",
     // Do not include test files
