--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.4.0",
     "@strapi/plugin-users-permissions": "5.4.0",
+    "@strapi/provider-upload-aws-s3": "^5.4.0",
     "@strapi/strapi": "5.4.0",
     "@strapi/typescript-utils": "^5.4.0",
-    "better-sqlite3": "11.3.0",
+    "pg": "^8.13.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
