--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-aws-s3": "^5.4.0",
     "@strapi/strapi": "5.4.0",
     "@strapi/typescript-utils": "^5.4.0",
+    "better-sqlite3": "^11.5.0",
     "pg": "^8.13.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
