--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.4.0",
     "@strapi/plugin-users-permissions": "5.4.0",
-    "@strapi/provider-upload-aws-s3": "^5.4.0",
-    "@strapi/strapi": "5.4.0",
-    "@strapi/typescript-utils": "^5.4.0",
+    "@strapi/provider-upload-aws-s3": "^5.5.2",
+    "@strapi/strapi": "5.5.2",
+    "@strapi/typescript-utils": "^5.5.2",
     "better-sqlite3": "^11.5.0",
     "pg": "^8.13.1",
     "react": "^18.0.0",
@@ -24,13 +24,13 @@
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.10.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=22.x.x",
+    "node": "20.18.1",
     "npm": ">=6.0.0"
   },
   "strapi": {
