--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": "20.18.1",
+    "node": ">=18.0.0 <=22.x.x",
     "npm": ">=6.0.0"
   },
   "strapi": {
