--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
     // Do not include test files
     "**/*.test.*",
     // Do not include plugins in the server compilation
-    "src/plugins/**"
+    "src/plugins/**",
+    "types/generated/**"
   ]
 }
