update env example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,37 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+# Server
+HOST=
+PORT=
+
+# Secrets
+APP_KEYS=
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+TRANSFER_TOKEN_SALT=
+
+# Database
+DATABASE_CLIENT=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_SSL=
+DATABASE_FILENAME=
+JWT_SECRET=
+
+# S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
+
+#Printify
+PRINTIFY_BASE_URL=
+PRINTIFY_SHOP_ID=
+PRINTIFY_ACCESS_TOKEN=
+PRINTIFY_SECRET_TOKEN=
+
+#Marianco Website
+BASE_URL_TO_STORE=
+
+
