--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,17 @@
 {
-  "extends": "@strapi/typescript-utils/tsconfigs/server",
   "compilerOptions": {
-    "module": "node16",
-    "moduleResolution": "nodenext",
-    "lib": [
-      "ES2020"
-    ],
     "target": "ES2019",
-    "strict": false,
+    "module": "commonjs",
+    "lib": ["ES2020"],
+    "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "incremental": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "noEmitOnError": true,
-    "noImplicitThis": true,
+    "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
-    "rootDir": ".",
-    "allowJs": true
+    "rootDir": "src",
+    "resolveJsonModule": true,
+    "noEmitOnError": true
   },
-  "include": [
-    // Include root files
-    "./",
-    // Include all ts files
-    "./**/*.ts",
-    // Include all js files
-    "./**/*.js",
-    // Force the JSON files in the src folder to be included
-    "src/**/*.json"
-  ],
-  "exclude": [
-    "node_modules/",
-    "build/",
-    "dist/",
-    ".cache/",
-    ".tmp/",
-    // Do not include admin files in the server compilation
-    "src/admin/",
-    // Do not include test files
-    "**/*.test.*",
-    // Do not include plugins in the server compilation
-    "src/plugins/**",
-    "types/generated/**"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.js"],
+  "exclude": ["node_modules", "build", "dist", ".cache", ".tmp", "src/admin"]
 }
